--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -156,13 +156,14 @@
             <a href="https://www.facebook.com/lampungpostupdate"><i class="bi bi-facebook"></i>Fecebook</a>
             <a href="https://x.com/lampungpost_"><i class="bi bi-twitter-x"></i></i>Twitter</a>
             <a href="https://www.tiktok.com/@lampungpost_official"><i class="bi bi-tiktok"></i>Tiktok</a>
+            <a href="https://www.youtube.com/@lampungpostupdate"><i class="bi bi-youtube"></i>Youtube</a>
         </div>
-        <div class="footer-microweb">
+        <div class="footer-container">
 
             <div class="footer-left">
                 <center>
-                    <h3>Affiliated with:</h3>
-                    <img src="../image/lampost300.png (1).webp" alt="Logo" id="microweb-img">
+                    <p>Affiliated with:</p>
+                    <img src="../image/lampost300.png (1).webp" alt="Logo">
                 </center>
                 <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
                     Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
@@ -171,6 +172,16 @@
             </div>
 
             <div class="footer-center">
+                <h4>Tentang Kami</h4>
+                <p>Alamat</p>
+                <p>Jl. Soekarno – Hatta No.108, Hajimena, Lampung Selatan</p>
+                <p>Email</p>
+                <p>redaksi@lampost.co</p>
+                <p>Telpon</p>
+                <p>(0721) 783693 (hunting), 773888 (redaksi)</p>
+            </div>
+
+            <div class="footer-right">
                 <center>
                     <h3>UNIVERSITAS LAMPUNG</h3>
                     <img src="../image/logo_unila.png" alt="image" class="logo-microweb">
@@ -180,18 +191,9 @@
 
         <!-- Footer bawah -->
         <div class="footer-bottom">
-            <h4>Tentang Kami</h4>
-            <p>Alamat</p>
-            <p>Jl. Soekarno – Hatta No.108, Hajimena, Lampung Selatan</p>
-            <p>Email</p>
-            <p>redaksi@lampost.co</p>
-            <p>Telpon</p>
-            <p>(0721) 783693 (hunting), 773888 (redaksi)</p>
-            <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
+            <small>© 2026 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-
-
     <script src="../js/unila/unila.js"></script>
     <script src="../js/unila/unila.pendidikan.js"></script>
     <script src="../js/unila/slider.js"></script>
