--- a/microweb/berita.ubl.html
+++ b/microweb/berita.ubl.html
@@ -82,7 +82,15 @@
                     <li><a href="../kategori/otomotif.html">Otomotif</a></li>
                 </ul>
             </li>
-            <li><a href="#">Investigasi</a></li>
+            <li class="has-sub">
+                <a href="#">Lampung</a>
+                <ul class="sub-menu">
+                    <li><a href="../kategori/lampung/bandar-lampung.html">Bandar Lampung</a></li>
+                    <li><a href="pemprovlampung.html">Pemprov Lampung</a></li>
+                    <li><a href="../kategori/lampung/lampung-barat.html">Lampung Barat</a></li>
+                    <li><a href="../kategori/lampung/lampung-timur.html">Lampung Timur</a></li>
+                </ul>
+            </li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
             <li><a href="#">Info Top</a></li>
@@ -130,12 +138,12 @@
 
         <div class="iklan-detail">
             <h2>BERITA LAINNYA</h2>
-                <div class="line-accent"></div>
+            <div class="line-accent"></div>
             <div class="terbaru"></div>
-            </div>
         </div>
     </div>
-   <footer class="footer">
+    </div>
+    <footer class="footer">
         <div class="sosmed">
             <a href="https://www.instagram.com/lampost.co/"><i class="bi bi-instagram"></i>Instagram</a>
             <a href="https://www.facebook.com/lampungpostupdate"><i class="bi bi-facebook"></i>Fecebook</a>
@@ -150,10 +158,10 @@
                     <p>Affiliated with:</p>
                     <img src="../image/lampost300.png (1).webp" alt="Logo">
                 </center>
-                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
-                    Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
-                    9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
-                    108 Rajabasa, Bandar Lampung.</p>
+                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Bandar
+                    Lampung. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
+                    9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jl. Soekarno – Hatta
+                    No.108, Hajimena, Lampung Selatan</p>
             </div>
 
             <div class="footer-center">
