--- a/microweb/pemprovlampung.html
+++ b/microweb/pemprovlampung.html
@@ -8,11 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="beranda.css">
-    <link rel="stylesheet" href="microweb.css">
-    <link rel="stylesheet" href="beranda-overal.css">
-    <link rel="icon" href="image/logo.png" type="image/png">
+    <link rel="stylesheet" href="../microweb.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../beranda.css">
+    <link rel="icon" href="../image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
 </head>
@@ -20,14 +19,14 @@
 <body>
     <nav class="navbar-main">
         <div class="logo">
-            <img src="image/lampost300.png (1).webp" alt="image" class="logo-img">
+            <img src="../image/lampost300.png (1).webp" alt="image" class="logo-img">
             <ul>
                 <li><a href="#" id="btnMenu">
                         <i class="bi bi-list"></i> Menu
                     </a></li>
-                <li><a href="harian.html">Harian</a></li>
+                <li><a href="../harian.html">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
-                <li><a href="index.html">Beranda</a></li>
+                <li><a href="../index.html">Beranda</a></li>
             </ul>
         </div>
         <div class="button-user">
@@ -43,52 +42,52 @@
     <!-- Navbar Sekunder -->
     <nav class="navbar-sub">
         <ul>
-            <li><a href="kategori/olahraga/bola.html">Bola</a></li>
+            <li><a href="../kategori/olahraga/bola.html">Bola</a></li>
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
-                    <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
-                    <li><a href="microweb/unila.html">Universitas Lampung</a></li>
-                    <li><a href="microweb/ubl.html">UBL</a></li>
-                    <li><a href="microweb/stiab.html">STIAB</a></li>
+                    <li><a href="teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="unila.html">Universitas Lampung</a></li>
+                    <li><a href="ubl.html">UBL</a></li>
+                    <li><a href="stiab.html">STIAB</a></li>
                 </ul>
             </li>
             <li class="has-sub">
                 <a href="#">Kolom</a>
                 <ul class="sub-menu" id="kolom">
-                    <li><a href="kategori/opini.html">Opini</a></li>
-                    <li><a href="kategori/refleksi.html">Refleksi</a></li>
-                    <li><a href="kategori/nuansa.html">Nuansa</a></li>
-                    <li><a href="kategori/tajuk-lampung-post.html">Tajuk</a></li>
-                    <li><a href="kategori/forum-guru.html">Forum Guru</a></li>
+                    <li><a href="../kategori/opini.html">Opini</a></li>
+                    <li><a href="../kategori/refleksi.html">Refleksi</a></li>
+                    <li><a href="../kategori/nuansa.html">Nuansa</a></li>
+                    <li><a href="../kategori/tajuk-lampung-post.html">Tajuk</a></li>
+                    <li><a href="../kategori/forum-guru.html">Forum Guru</a></li>
                 </ul>
             </li>
             <li class="has-sub">
                 <a href="#">Vidio</a>
                 <ul class="sub-menu" id="vidio">
                     <li><a href="#">Breking New</a></li>
-                    <li><a href="kategori/vidio/bedah-tajuk.html">Bedah Tajuk</a></li>
+                    <li><a href="../kategori/vidio/bedah-tajuk.html">Bedah Tajuk</a></li>
                     <li><a href="#">Economic Corner</a></li>
                     <li><a href="#">Podcast</a></li>
                 </ul>
             </li>
-            <li><a href="kategori/teknologi.html">Teknologi</a></li>
+            <li><a href="../kategori/teknologi.html">Teknologi</a></li>
             <li class="has-sub">
                 <a href="#">Ekonomi</a>
                 <ul class="sub-menu">
                     <li><a href="#">Bank Indonesia Lampung</a></li>
-                    <li><a href="microweb/bsi.html">Bank Syariah Indonesia</a></li>
-                    <li><a href="microweb/banklampung.html">Bank Lampung</a></li>
-                    <li><a href="kategori/otomotif.html">Otomotif</a></li>
+                    <li><a href="bsi.html">Bank Syariah Indonesia</a></li>
+                    <li><a href="banklampung.html">Bank Lampung</a></li>
+                    <li><a href="../kategori/otomotif.html">Otomotif</a></li>
                 </ul>
             </li>
             <li class="has-sub">
                 <a href="#">Lampung</a>
                 <ul class="sub-menu">
-                    <li><a href="kategori/lampung/bandar-lampung.html">Bandar Lampung</a></li>
-                    <li><a href="microweb/pemprovlampung.html">Pemprov Lampung</a></li>
-                    <li><a href="kategori/lampung/lampung-barat.html">Lampung Barat</a></li>
-                    <li><a href="kategori/lampung/lampung-timur.html">Lampung Timur</a></li>
+                    <li><a href="../kategori/lampung/bandar-lampung.html">Bandar Lampung</a></li>
+                    <li><a href="pemprovlampung.html">Pemprov Lampung</a></li>
+                    <li><a href="../kategori/lampung/lampung-barat.html">Lampung Barat</a></li>
+                    <li><a href="../kategori/lampung/lampung-timur.html">Lampung Timur</a></li>
                 </ul>
             </li>
             <li><a href="#">Cek Fakta</a></li>
@@ -103,14 +102,8 @@
         <center>
             <h2>MENU</h2>
         </center>
-        <div class="search-sidebar" id="searchSidebar">
-            <div class="input-menu">
-                <input type="search" class="search-input" placeholder="Cari Artikel Disini.." aria-label="Search"
-                    id="input-sidebar">
-                <button type="button" class="search-btn" aria-label="Search" id="btn-sidebar-search">
-                    <i class="bi bi-search"></i>
-                </button>
-            </div>
+        <div class="search-sidebar">
+            <input type="search" class="search-input" placeholder="Cari Artikel Disini" aria-label="Search">
         </div>
         <div class="sidebar-isi">
             <ul>
@@ -118,24 +111,39 @@
                 <li><a href="#"><i class="bi bi-camera-video"></i> Vidio</a></li>
                 <li><a href="#"><i class="bi bi-mic"></i> Podcase</a></li>
                 <li><a href="#"><i class="bi bi-newspaper"></i> Infografik</a></li></br>
-                <li><a href="harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
+                <li><a href="../harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
                 <li><a href="#"><i class="bi bi-calendar3"></i> Mingguan</a></li>
-                <li><a href="index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
+                <li><a href="../index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
             </ul>
+        </div>
+    </div>
+    <div class="slider-microweb">
+        <div class="hero-slider">
+            <div class="hero-track"></div>
+            <div class="hero-dots"></div>
         </div>
     </div>
     <div class="container-microweb">
         <div class="berita-microweb">
-            <h2 class="search-title"></h2>
+            <h2>BERITA TERKINI</h2>
             <div class="line-accent"></div>
-            <div class="home" id="search-results"></div>
+            <div class="berita-terbaru">
+
+            </div>
+            <div class="home">
+
+            </div>
+            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
+            <div class="Pendidikan">
+
+            </div>
         </div>
         <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
             <div class="line-accent"></div>
             <div class="tagar">
-                <a href="harian.html">
-                    <img src="image/showcase-350pxl2.gif" alt="img" class="epaper-image" id="epeper-microweb">
+                <a href="../harian.html">
+                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
             <h2>BERITA TERKINI</h2>
@@ -144,7 +152,7 @@
             </div>
         </div>
     </div>
-   <footer class="footer">
+    <footer class="footer">
         <div class="sosmed">
             <a href="https://www.instagram.com/lampost.co/"><i class="bi bi-instagram"></i>Instagram</a>
             <a href="https://www.facebook.com/lampungpostupdate"><i class="bi bi-facebook"></i>Fecebook</a>
@@ -157,8 +165,12 @@
             <div class="footer-left">
                 <center>
                     <p>Affiliated with:</p>
-                    <img src="image/media.webp" alt="Logo">
+                    <img src="../image/lampost300.png (1).webp" alt="Logo">
                 </center>
+                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Pemprov Lampung.
+                    Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB : 9120102863787
+                    yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jl. Soekarno – Hatta No.108, Hajimena,
+                    Lampung Selatan</p>
             </div>
 
             <div class="footer-center">
@@ -172,14 +184,10 @@
             </div>
 
             <div class="footer-right">
-                <h4>Sitemap</h4>
-                <a href="#">Beranda</a>
-                <a href="#">Tentang Kami</a>
-                <a href="#">Compro</a>
-                <a href="#">Ilkan</a>
-                <a href="#">Microsite</a>
-                <a href="#">RRS</a>
-                <a href="#">Pedoman Media Siber</a>
+                <center>
+                    <h3>PROVINSI LAMPUNG</h3>
+                    <img src="../image/Logo-Provinsi-Lampung-445x570-1.png" alt="image" class="logo-microweb">
+                </center>
             </div>
         </div>
 
@@ -188,12 +196,14 @@
             <small>© 2026 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-    <script src="js/search.js"></script>
-    <script src="js/beranda/search-beranda.js"></script>
-    <script src="js/scrip.js"></script>
-    <script src="js/navbar.js"></script>
-    <script src="keyfrem.js"></script>
-    <script src="js/terbaru.berita.js"></script>
+
+
+    <script src="../js/pemprov/lampung.js"></script>
+    <script src="../js/pemprov/slider.js"></script>
+    <script src="../js/pemprov/terbaru.js"></script>
+    <script src="../js/scrip.js"></script>
+    <script src="../js/navbar.js"></script>
+    <script src="../keyfrem.js"></script>
 </body>
 
 </html>
