--- a/index.html
+++ b/index.html
@@ -81,7 +81,15 @@
                     <li><a href="kategori/otomotif.html">Otomotif</a></li>
                 </ul>
             </li>
-            <li><a href="#">Investigasi</a></li>
+            <li class="has-sub">
+                <a href="#">Lampung</a>
+                <ul class="sub-menu">
+                    <li><a href="kategori/lampung/bandar-lampung.html">Bandar Lampung</a></li>
+                    <li><a href="microweb/pemprovlampung.html">Pemprov Lampung</a></li>
+                    <li><a href="kategori/lampung/lampung-barat.html">Lampung Barat</a></li>
+                    <li><a href="kategori/lampung/lampung-timur.html">Lampung Timur</a></li>
+                </ul>
+            </li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
             <li><a href="#">Info Top</a></li>
