--- a/kategori/olahraga/bola.html
+++ b/kategori/olahraga/bola.html
@@ -82,7 +82,15 @@
                     <li><a href="../otomotif.html">Otomotif</a></li>
                 </ul>
             </li>
-            <li><a href="#">Investigasi</a></li>
+            <li class="has-sub">
+                <a href="#">Lampung</a>
+                <ul class="sub-menu">
+                    <li><a href="../lampung/bandar-lampung.html">Bandar Lampung</a></li>
+                    <li><a href="../../microweb/pemprovlampung.html">Pemprov Lampung</a></li>
+                    <li><a href="../lampung/lampung-barat.html">Lampung Barat</a></li>
+                    <li><a href="../lampung/lampung-timur.html">Lampung Timur</a></li>
+                </ul>
+            </li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
             <li><a href="#">Info Top</a></li>
@@ -135,7 +143,7 @@
             <h2>KORAN DIGITAL</h2>
             <div class="line-accent"></div>
             <div class="tagar">
-                <a href="../harian.html">
+                <a href="../../harian.html">
                     <img src="../../image/showcase-350pxl2.gif" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
