--- a/microweb/ubl.html
+++ b/microweb/ubl.html
@@ -81,7 +81,15 @@
                     <li><a href="../kategori/otomotif.html">Otomotif</a></li>
                 </ul>
             </li>
-            <li><a href="#">Investigasi</a></li>
+            <li class="has-sub">
+                <a href="#">Lampung</a>
+                <ul class="sub-menu">
+                    <li><a href="../kategori/lampung/bandar-lampung.html">Bandar Lampung</a></li>
+                    <li><a href="pemprovlampung.html">Pemprov Lampung</a></li>
+                    <li><a href="../kategori/lampung/lampung-barat.html">Lampung Barat</a></li>
+                    <li><a href="../kategori/lampung/lampung-timur.html">Lampung Timur</a></li>
+                </ul>
+            </li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
             <li><a href="#">Info Top</a></li>
@@ -165,10 +173,10 @@
                     <p>Affiliated with:</p>
                     <img src="../image/lampost300.png (1).webp" alt="Logo">
                 </center>
-                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
-                    Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
-                    9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
-                    108 Rajabasa, Bandar Lampung.</p>
+                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Bandar
+                    Lampung. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
+                    9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jl. Soekarno – Hatta
+                    No.108, Hajimena, Lampung Selatan</p>
             </div>
 
             <div class="footer-center">
