ini tampilan aja

--- a/kategori/vidio/bedah-tajuk.html
+++ b/kategori/vidio/bedah-tajuk.html
@@ -75,7 +75,7 @@
             <li class="has-sub">
                 <a href="#">Ekonomi</a>
                 <ul class="sub-menu">
-                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="../../microweb/bankindonesialampung.html">Bank Indonesia Lampung</a></li>
                     <li><a href="../../microweb/bsi.html">Bank Syariah Indonesia</a></li>
                     <li><a href="../../microweb/banklampung.html">Bank Lampung</a></li>
                     <li><a href="../otomotif.html">Otomotif</a></li>
