--- a/microweb/berita.bankindonesialampung.html
+++ b/microweb/berita.bankindonesialampung.html
@@ -176,7 +176,7 @@
             <div class="footer-right">
                 <center>
                     <h3>BANK LAMPUNG INDONESIA</h3>
-                    <img src="../image/logobi.png" alt="image" class="logo-bank-lampung>
+                    <img src="../image/logobi.png" alt="image" class="logo-bank-lampung">
                 </center>
             </div>
         </div>
