--- a/microweb/berita.banklampung.html
+++ b/microweb/berita.banklampung.html
@@ -75,7 +75,7 @@
             <li class="has-sub">
                 <a href="#">Ekonomi</a>
                 <ul class="sub-menu">
-                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="bankindonesialampung.html">Bank Indonesia Lampung</a></li>
                     <li><a href="bsi.html">Bank Syariah Indonesia</a></li>
                     <li><a href="banklampung.html">Bank Lampung</a></li>
                     <li><a href="../kategori/otomotif.html">Otomotif</a></li>
