--- a/microweb/berita.bsi.html
+++ b/microweb/berita.bsi.html
@@ -75,7 +75,7 @@
             <li class="has-sub">
                 <a href="#">Ekonomi</a>
                 <ul class="sub-menu">
-                    <li><a href="#">Bank Indonesia Lampung</a></li>
+                    <li><a href="bankindonesialampung.html">Bank Indonesia Lampung</a></li>
                     <li><a href="bsi.html">Bank Syariah Indonesia</a></li>
                     <li><a href="banklampung.html">Bank Lampung</a></li>
                     <li><a href="../kategori/otomotif.html">Otomotif</a></li>
@@ -139,15 +139,10 @@
         </div>
 
 
-        <div class="iklan">
-            <div class="tagar">
-                <h3>TOPIK TRENDING</h3>
-                <p>#Banjir Sumatra</p>
-                <p>#Muzakir Manaf</p>
-                <p>#Makan Bergizi Gratis</p>
-                <p>#Purbaya Yudhi Sadewa</p>
-                <p>#Akal ImitasiMuzakir Manaf</p>
-                <p>#Prabowo</p>
+        <div class="iklan-detail">
+            <h2>BERITA LAINNYA</h2>
+                <div class="line-accent"></div>
+            <div class="terbaru"></div>
             </div>
         </div>
     </div>
