ini tampilan aja

--- a/index.html
+++ b/index.html
@@ -124,15 +124,17 @@
         </div>
     </div>
     <section class="hero-slider fade-in">
-        <div class="hero-track fade-in">
-            <article class="hero-left fade-in"></article>
-            <div class="hero-right fade-in">
-                <div class="hero-right-bottom fade-in">
-                    <article class="hero-box bottom-1"></article>
-                </div>
-                <div class="hero-right-top fade-in">
-                    <article class="hero-box top-1"></article>
-                    <article class="hero-box top-2"></article>
+        <div class="slider-dekstop">
+            <div class="hero-track fade-in">
+                <article class="hero-left fade-in"></article>
+                <div class="hero-right fade-in">
+                    <div class="hero-right-bottom fade-in">
+                        <article class="hero-box bottom-1"></article>
+                    </div>
+                    <div class="hero-right-top fade-in">
+                        <article class="hero-box top-1"></article>
+                        <article class="hero-box top-2"></article>
+                    </div>
                 </div>
             </div>
         </div>
@@ -149,21 +151,22 @@
         </div>
     </div>
     <div class="news fade-in">
-        <div class="news-ticker">
-            <span class="ticker-label">TRENDING NOW</span>
-            <div class="ticker-content">
-                <a href="#" class="ticker-text" id="tickerText">
-                    Memuat berita...
-                </a>
+        <div class="news-padding">
+            <div class="news-ticker">
+                <span class="ticker-label">TRENDING NOW</span>
+                <div class="ticker-content">
+                    <a href="#" class="ticker-text" id="tickerText">
+                        Memuat berita...
+                    </a>
+                </div>
+            </div>
+            <div class="search-beranda" id="searchBeranda">
+                <input type="text" class="search-input" placeholder="Cari Artikel Disini.." />
+                <button type="button" class="search-btn">
+                    <i class="bi bi-search"></i>
+                </button>
             </div>
         </div>
-        <div class="search-beranda" id="searchBeranda">
-            <input type="text" class="search-input" placeholder="Cari Artikel Disini.." />
-            <button type="button" class="search-btn">
-                <i class="bi bi-search"></i>
-            </button>
-        </div>
-
     </div>
     <div class="iklan-gambar fade-in">
         <a href="#">
