--- a/kategori/teknologi.html
+++ b/kategori/teknologi.html
@@ -19,28 +19,28 @@
 
 <body>
     <nav class="navbar-main">
-        <div class="logo">
-            <img src="../image/lampost300.png (1).webp" alt="image" class="logo-img">
-            <ul>
-                <li><a href="#" id="btnMenu">
-                        <i class="bi bi-list"></i> Menu
-                    </a></li>
-                <li><a href="../harian.html">Harian</a></li>
-                <li><a href="#">Mingguan</a></li>
-                <li><a href="../index.html">Beranda</a></li>
-            </ul>
-        </div>
-        <div class="button-user">
-            <a href="#" class="langganan">Langganan</a>
-            <a href="#" class="login"><i class="bi bi-person-circle"></i>Masuk</a>
-            <a href="#" class="login-mobile"><i class="bi bi-person-circle"></i></a>
-            <a href="#" id="btnMenu" class="menu-mobile">
-                <i class="bi bi-list"></i>
-            </a>
+        <div class="navbar-padding">
+            <div class="logo">
+                <img src="../image/lampost300.png (1).webp" alt="image" class="logo-img">
+                <ul>
+                    <li><a href="#" id="btnMenu">
+                            <i class="bi bi-list"></i> Menu
+                        </a></li>
+                    <li><a href="../harian.html">Harian</a></li>
+                    <li><a href="#">Mingguan</a></li>
+                    <li><a href="../index.html">Beranda</a></li>
+                </ul>
+            </div>
+            <div class="button-user">
+                <a href="#" class="langganan">Langganan</a>
+                <a href="#" class="login"><i class="bi bi-person-circle"></i>Masuk</a>
+                <a href="#" class="login-mobile"><i class="bi bi-person-circle"></i></a>
+                <a href="#" id="btnMenu" class="menu-mobile">
+                    <i class="bi bi-list"></i>
+                </a>
+            </div>
         </div>
     </nav>
-
-    <!-- Navbar Sekunder -->
     <nav class="navbar-sub">
         <ul>
             <li><a href="olahraga/bola.html">Bola</a></li>
@@ -196,13 +196,13 @@
             <small>© 2026 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-        <script src="../js/kategori/teknologi.js"></script>
-        <script src="../js/kategori/terbaru.js"></script>
-        <script src="../js/beranda/detail.js"></script>
-        <script src="../js/kategori/search-kategori.js"></script>
-        <script src="../js/scrip.js"></script>
-        <script src="../js/navbar.js"></script>
-        <script src="../keyfrem.js"></script>
+    <script src="../js/kategori/teknologi.js"></script>
+    <script src="../js/kategori/terbaru.js"></script>
+    <script src="../js/beranda/detail.js"></script>
+    <script src="../js/kategori/search-kategori.js"></script>
+    <script src="../js/scrip.js"></script>
+    <script src="../js/navbar.js"></script>
+    <script src="../keyfrem.js"></script>
 </body>
 
 </html>
