--- a/microweb/berita.unila.html
+++ b/microweb/berita.unila.html
@@ -19,28 +19,28 @@
 
 <body>
     <nav class="navbar-main">
-        <div class="logo">
-            <img src="../image/lampost300.png (1).webp" alt="image" class="logo-img">
-            <ul>
-                <li><a href="#" id="btnMenu">
-                        <i class="bi bi-list"></i> Menu
-                    </a></li>
-                <li><a href="../harian.html">Harian</a></li>
-                <li><a href="#">Mingguan</a></li>
-                <li><a href="../index.html">Beranda</a></li>
-            </ul>
-        </div>
-        <div class="button-user">
-            <a href="#" class="langganan">Langganan</a>
-            <a href="#" class="login"><i class="bi bi-person-circle"></i>Masuk</a>
-            <a href="#" class="login-mobile"><i class="bi bi-person-circle"></i></a>
-            <a href="#" id="btnMenu" class="menu-mobile">
-                <i class="bi bi-list"></i>
-            </a>
+        <div class="navbar-padding">
+            <div class="logo">
+                <img src="../image/lampost300.png (1).webp" alt="image" class="logo-img">
+                <ul>
+                    <li><a href="#" id="btnMenu">
+                            <i class="bi bi-list"></i> Menu
+                        </a></li>
+                    <li><a href="../harian.html">Harian</a></li>
+                    <li><a href="#">Mingguan</a></li>
+                    <li><a href="../index.html">Beranda</a></li>
+                </ul>
+            </div>
+            <div class="button-user">
+                <a href="#" class="langganan">Langganan</a>
+                <a href="#" class="login"><i class="bi bi-person-circle"></i>Masuk</a>
+                <a href="#" class="login-mobile"><i class="bi bi-person-circle"></i></a>
+                <a href="#" id="btnMenu" class="menu-mobile">
+                    <i class="bi bi-list"></i>
+                </a>
+            </div>
         </div>
     </nav>
-
-    <!-- Navbar Sekunder -->
     <nav class="navbar-sub">
         <ul>
             <li><a href="../kategori/olahraga/bola.html">Bola</a></li>
