--- a/koran.html
+++ b/koran.html
@@ -52,7 +52,7 @@
                     <li><a href="microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
-                        <li class="has-sub">
+            <li class="has-sub">
                 <a href="#">Kolom</a>
                 <ul class="sub-menu" id="kolom">
                     <li><a href="kategori/opini.html">Opini</a></li>
@@ -142,17 +142,17 @@
                 Baca berita terkait lainnya
             </a>
         </div>
-
-
-        <div class="iklan">
+        <div class="iklan-halaman">
+            <h2>KORAN DIGITAL</h2>
+            <div class="line-accent"></div>
             <div class="tagar">
-                <h3>TOPIK TRENDING</h3>
-                <p>#Banjir Sumatra</p>
-                <p>#Muzakir Manaf</p>
-                <p>#Makan Bergizi Gratis</p>
-                <p>#Purbaya Yudhi Sadewa</p>
-                <p>#Akal ImitasiMuzakir Manaf</p>
-                <p>#Prabowo</p>
+                <a href="harian.html">
+                    <img src="image/showcase-350pxl2.gif" alt="img" class="epaper-image" id="epeper-microweb">
+                </a>
+            </div>
+            <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
+            <div class="terbaru">
             </div>
         </div>
     </div>
@@ -202,6 +202,7 @@
     </footer>
     <script src="js/epaper/harian.js"></script>
     <script src="js/beranda/search-beranda.js"></script>
+    <script src="js/terbaru.berita.js"></script>
     <script src="js/voice.js"></script>
     <script src="js/scrip.js"></script>
     <script src="js/navbar.js"></script>
