--- a/harian.html
+++ b/harian.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="halaman.css">
     <link rel="stylesheet" href="beranda-overal.css">
+    <link rel="stylesheet" href="microweb.css">
     <link rel="icon" href="image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
@@ -142,15 +143,17 @@
 
             </div>
         </div>
-        <div class="iklan">
+        <div class="iklan-halaman">
+            <h2>KORAN DIGITAL</h2>
+            <div class="line-accent"></div>
             <div class="tagar">
-                <h3>TOPIK TRENDING</h3>
-                <p>#Banjir Sumatra</p>
-                <p>#Muzakir Manaf</p>
-                <p>#Makan Bergizi Gratis</p>
-                <p>#Purbaya Yudhi Sadewa</p>
-                <p>#Akal ImitasiMuzakir Manaf</p>
-                <p>#Prabowo</p>
+                <a href="harian.html">
+                    <img src="image/showcase-350pxl2.gif" alt="img" class="epaper-image" id="epeper-microweb">
+                </a>
+            </div>
+            <h2>BERITA TERKINI</h2>
+            <div class="line-accent"></div>
+            <div class="terbaru">
             </div>
         </div>
     </div>
@@ -202,6 +205,7 @@
     <script src="js/beranda/search-beranda.js"></script>
     <script src="js/berita-harian.js"></script>
     <script src="js/epaper/berita-left.js"></script>
+    <script src="js/terbaru.berita.js"></script>
     <script src="js/navbar.js"></script>
     <script src="keyfrem.js"></script>
 </body>
