--- a/halaman.html
+++ b/halaman.html
@@ -209,6 +209,7 @@
     <script src="js/voice.js"></script>
     <script src="js/scrip.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="keyfrem.js"></script>
 </body>
 
 </html>
