--- a/koran.html
+++ b/koran.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="halaman.css">
+    <link rel="stylesheet" href="epaper.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="beranda-overal.css">
     <link rel="icon" href="image/logo.png" type="image/png">
