--- a/halaman.html
+++ b/halaman.html
@@ -138,12 +138,10 @@
             <img class="gambar-berita">
 
             <div class="isi-berita"></div>
+            <div class="ai-tags" id="aiTags"></div>
             <div class="home">
-               
             </div>
         </div>
-
-
         <div class="iklan-halaman">
             <h2>KORAN DIGITAL</h2>
             <div class="line-accent"></div>
@@ -197,7 +195,6 @@
             </div>
         </div>
 
-        <!-- Footer bawah -->
         <div class="footer-bottom">
             <small>© 2026 Lampost.co - Media Group. All rights reserved.</small>
         </div>
