--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../beranda.css">
     <link rel="stylesheet" href="../microweb.css">
     <link rel="icon" href="../image/logo.png" type="image/png">
+    <link rel="canonical" href="https://lampost.co/mikroweb/universitaslampung">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
 </head>
