--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@
         <h2>OLAHRAGA & HIBURAN</h2>
         <div class="line-accent"></div>
     </div>
+    <button id="backToTop"><i class="bi bi-arrow-up"></i></button>
+
     <footer class="footer">
         <div class="sosmed">
             <a href="https://www.instagram.com/lampost.co/"><i class="bi bi-instagram"></i>Instagram</a>
@@ -285,7 +287,7 @@
         </div>
     </footer>
 
-
+    <script src="scrol.js"></script>
     <script src="https://tipalsyahh.github.io/lampost-js/js/navbar.js"></script>
     <script src="https://tipalsyahh.github.io/lampost-js/js/scrip.js"></script>
     <script src="https://tipalsyahh.github.io/lampost-js/js/app.js"></script>
